--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "dev": "dain dev",
+    "dev": "dain dev --port 2023",
     "build": "dain build",
     "deploy": "dain deploy"
   },
@@ -18,6 +18,9 @@
     "axios": "^1.7.5",
     "dotenv": "^16.4.7",
     "hono": "^4.6.3",
+    "langchain": "^0.3.15",
+    "open": "^10.1.0",
+    "openai": "^4.85.1",
     "ts-node": "^10.4.0",
     "typescript": "^5.0.0",
     "zod": "^3.23.8"
