--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dainprotocol/cli": "^1.0.31",
     "@dainprotocol/service-sdk": "^1.0.93",
     "@dainprotocol/utils": "^0.0.48",
+    "@js-temporal/polyfill": "^0.4.4",
     "@types/express": "^4.17.13",
     "@types/node": "^22.5.4",
     "axios": "^1.7.5",
