--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@dainprotocol/service-sdk": "^1.0.93",
     "@dainprotocol/utils": "^0.0.48",
     "@js-temporal/polyfill": "^0.4.4",
+    "@langchain/community": "^0.3.30",
+    "@langchain/openai": "^0.4.4",
     "@types/express": "^4.17.13",
     "@types/node": "^22.5.4",
     "axios": "^1.7.5",
+    "chromadb": "^1.10.4",
     "dotenv": "^16.4.7",
     "hono": "^4.6.3",
     "langchain": "^0.3.15",
